<resources>
    <string name="app_name">AAI</string>
    <string name="title_messages">Messages</string>
    <string name="title_workspace">Workspace</string>
    <string name="title_me">Me</string>
    <string name="title_punch">Punch</string>
    <string name="title_approvals">Approvals</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_approval">MainActivity</string>
</resources>