<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_main_navigation"
    app:startDestination="@+id/navigation_messages">

    <fragment
        android:id="@+id/navigation_messages"
        android:name="asiacom_americas.com.aai.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_workspace"
        android:name="asiacom_americas.com.aai.ui.workspace.WorkspaceFragment"
        android:label="@string/title_workspace"
        tools:layout="@layout/fragment_workspace" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="asiacom_americas.com.aai.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>