<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_attendance_navigation"
    app:startDestination="@+id/navigation_punch">

    <fragment
        android:id="@+id/navigation_punch"
        android:name="asiacom_americas.com.aai.ui.punch.PunchFragment"
        android:label="@string/title_punch"
        tools:layout="@layout/fragment_punch" />

    <fragment
        android:id="@+id/navigation_approvals"
        android:name="asiacom_americas.com.aai.ui.approvals.ApprovalsFragment"
        android:label="@string/title_approvals"
        tools:layout="@layout/fragment_approvals" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="asiacom_americas.com.aai.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>